# Jetson-Processing

./: README.md
.circleci/: config.yml
applications/jetson_spi/: CMakeLists.txt  main.cpp
applications/jetson_test/: CMakeLists.txt  main.cpp
applications/rpi-pixhawk_communications/rpi/: CMakeLists.txt  main.cpp
applications/rpi_logging_test/: CMakeLists.txt  log_stuff.cpp
applications/rpi_logging_test_no_buffer/: CMakeLists.txt  log_stuff.cpp
applications/spi_test/: CMakeLists.txt  dummy_main.cpp  rpi_main.cpp
applications/stub_logging_test/: CMakeLists.txt  log_stuff.cpp
applications/stub_logging_test_no_buffer/: CMakeLists.txt  log_stuff.cpp
communications/pixhawk/packets/: ack_packet.cpp  ack_packet.h  arming_packet.cpp  arming_packet.h  beacon_packet.cpp  beacon_packet.h  directions_packet.cpp  directions_packet.h  flight_packet.cpp  flight_packet.h  gps_values_packet.cpp  gps_values_packet.h  mode_packet.cpp  mode_packet.h  packet_manager.cpp  packet_manager.h  pixhawk_packet.cpp  pixhawk_packet.h  pose_packet.cpp  pose_packet.h  test_packet.cpp  test_packet.h
communications/pixhawk/uart/: jetson_uart.cpp  jetson_uart.h  nrf_consts.h  pixhawk_uart.cpp  pixhawk_uart.h  rpi_uart.cpp  rpi_uart.h  test_uart.cpp  test_uart.h  uart.cpp  uart.h
communications/rf/comms/gpio/: dummy_gpio.h  gpio.cpp  gpio.h  jetson_gpio.cpp  jetson_gpio.h  rpi_gpio.cpp  rpi_gpio.h  uav_gpio.cpp  uav_gpio.h
communications/rf/comms/spi/: dummy_spi.h  jetson_spi.cpp  jetson_spi.h  rpi_spi.cpp  rpi_spi.h  spi_bus.cpp  spi_bus.h
communications/rf/packets/: nrf_handler.cpp  nrf_handler.h  rf_24_handler.cpp  rf_24_handler.h  rf_packet.cpp  rf_packet.h
experiments/final_jetson/: CMakeLists.txt  main.cpp  vadl.sh
experiments/rpi_final/: CMakeLists.txt  main.cpp
experiments/subscale2/: CMakeLists.txt  main.cpp
images/: image.cpp  image.h
images/buffer/: image_buffer.cpp  image_buffer.h
images/capture/: arducam.cpp  arducam.h  camera.cpp  camera.h  jetson_camera.cpp  jetson_camera.h  raspicamera.cpp  raspicamera.h  test_camera.cpp  test_camera.h
images/processing/uav/: uav_processor.cpp  uav_processor.h
images/processing/uav/accel/: accel_mma_8451_pi.cpp  accel_mma_8451_pi.h  lpf_accel.cpp  lpf_accel.h  mma8451_pi.c  mma8451_pi.h  vector_3.cpp  vector_3.h
logging/: arming_entry.cpp  arming_entry.h  beacon_entry.cpp  beacon_entry.h  data_logger.cpp  data_logger.h  gps_entry.cpp  gps_entry.h  log_entry.cpp  log_entry.h  mode_entry.cpp  mode_entry.h  pixhawk_entry.cpp  pixhawk_entry.h  raw_accel_entry.cpp  raw_accel_entry.h  rf_gps_entry.cpp  rf_gps_entry.h  soft_error_entry.cpp  soft_error_entry.h  target_entry.cpp  target_entry.h  test_entry.cpp  test_entry.h
logging/files/: file_manager.cpp  file_manager.h  jetson_file_manager.cpp  jetson_file_manager.h  rpi_file_manager.cpp  rpi_file_manager.h
logging/time/: time_manager.cpp  time_manager.h
scripts/post-processing/: accel.py  infer.sh  kalman_algo.py  mode_data.py  net_results.py  optimize.py  output.avi  path_plot.py  picam.yaml  pixhawk_data.py  plot.py  plot_accel.py  preprocess.py  rotate_flight.py  s2d_data.py  split_data.py  target_data.py  tests.py  vars.txt  video.py  visualize.py
scripts/struct2depth/: gen_data_city.py  gen_data_kitti.py  gen_data_lab.py  gen_data_vadl.py  get_ckpt.py  inference.py  model.py  nets.py  quicktest.py  reader.py  train.py  util.py
systems/: final_jetson_system.cpp  final_jetson_system.h  final_rpi_system.cpp  final_rpi_system.h  flight_system.cpp  flight_system.h  subscale_2_system.cpp  subscale_2_system.h
tests/: CMakeLists.txt  tests.cpp
tests/communications/pixhawk/packets/: ack_packet_tester.h  directions_packet_tester.h  flight_packet_tester.h  packet_manager_tester.h  test_packet_tester.h
tests/images/: image_tester.h
tests/images/buffer/: image_buffer_tester.h
tests/images/capture/: arducam_tester.h  camera_tester.h  raspicamera_tester.h
tests/logging/: data_logger_tester.h  log_entry_tester.h  soft_error_entry_tester.h
tests/logging/files/: rpi_file_manager_tester.h
tests/logging/time/: time_manager_tester.h
